--- a/package.json
+++ b/package.json
@@ -3,21 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@builder.io/react": "^2.0.15",
+    "@builder.io/react": "^3.0.2",
     "@builder.io/widgets": "^1.2.24",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.9",
-    "dompurify": "^3.0.1",
-    "html-react-parser": "^3.0.12",
+    "@mui/material": "^5.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "react-svg": "^16.1.6",
-    "web-vitals": "^2.1.4"
+    "react-svg": "^16.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
