--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
-  "short_name": "Coqui Monster",
+  "manifest_version": 2,
   "name": "Coqui Monster",
+  "description": "Coqui Monster is a React site built for the Vtuber Coqui",
+  "version": "1.0",
   "icons": [
     {
       "src": "favicon.ico",
