--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coqui.monster",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@builder.io/react": "^3.1.1",
-    "@builder.io/widgets": "^1.2.24",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.16",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.14.16",
+    "@sanity/color-input": "^3.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.20.2",
     "@svgr/webpack": "^8.1.0",
-    "@tabler/icons-react": "^2.40.0",
-    "eslint": "8.54.0",
-    "eslint-config-next": "14.0.3",
-    "next": "^13.4.12",
-    "next-sanity": "^5.5.10",
+    "@tabler/icons-react": "^3.2.0",
+    "eslint": "^9.1.1",
+    "eslint-config-next": "^14.2.3",
+    "next": "^14.2.3",
+    "next-sanity": "^9.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.1.0",
     "sanity": "^3.20.2",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.8"
   }
 }
