--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
-    "@svgr/webpack": "^8.1.0",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.14.16",
     "@tabler/icons-react": "^3.19.0",
     "dotenv": "^16.4.5",
-    "eslint": "^9.11.1",
-    "eslint-config-next": "^14.2.3",
-    "next": "^14.2.3",
+    "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.13"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "eslint": "^9.11.1"
   }
 }
