--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run generate-icons && next build",
+    "build": "npm run clear-cache && npm run generate-icons && next build",
     "start": "next start",
     "lint": "next lint",
     "generate:importmap": "payload generate:importmap",
-    "generate-icons": "node scripts/generateIconList.mjs"
+    "generate-icons": "node scripts/generateIconList.mjs",
+    "clear-cache": "node scripts/clearCache.mjs"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
