--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "prebuild": "npm run generate:importmap && npm run generate:redirects && npm run generate-icons && npm run clear-cache",
+    "prebuild": "npm run generate:redirects",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "generate:importmap": "payload generate:importmap",
     "generate-icons": "node scripts/generateIconList.mjs",
-    "clear-cache": "node scripts/clearCache.mjs",
     "generate:redirects": "payload run scripts/generateRedirects.mjs"
   },
   "dependencies": {
