--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@payloadcms/next": "^3.36.1",
     "@payloadcms/plugin-redirects": "^3.36.1",
     "@payloadcms/richtext-lexical": "^3.36.1",
+    "@payloadcms/storage-s3": "^3.36.1",
     "@tabler/icons-react": "^3.28.1",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
