--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "prebuild": "npm run generate:redirects",
+    "prebuild": "npm run generate:redirects && npm run generate:importmap",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,29 +16,29 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@innovixx/payload-color-picker-field": "^2.0.1",
+    "@innovixx/payload-color-picker-field": "^2.0.2",
     "@innovixx/payload-icon-picker-field": "^1.0.0-beta.6",
-    "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.3.1",
-    "@payloadcms/db-postgres": "^3.36.1",
-    "@payloadcms/live-preview-react": "^3.36.1",
-    "@payloadcms/next": "^3.36.1",
-    "@payloadcms/plugin-redirects": "^3.36.1",
-    "@payloadcms/richtext-lexical": "^3.36.1",
-    "@payloadcms/storage-s3": "^3.36.1",
-    "@tabler/icons-react": "^3.28.1",
-    "dotenv": "^16.4.7",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@payloadcms/db-postgres": "^3.37.0",
+    "@payloadcms/live-preview-react": "^3.37.0",
+    "@payloadcms/next": "^3.37.0",
+    "@payloadcms/plugin-redirects": "^3.37.0",
+    "@payloadcms/richtext-lexical": "^3.37.0",
+    "@payloadcms/storage-s3": "^3.37.0",
+    "@tabler/icons-react": "^3.31.0",
+    "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "^15.1.4",
-    "payload": "^3.36.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "styled-components": "^6.1.14"
+    "next": "^15.3.2",
+    "payload": "^3.37.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "eslint": "^9.18.0",
-    "typescript": "5.7.3"
+    "eslint": "^9.26.0",
+    "typescript": "^5.8.3"
   }
 }
