--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "prebuild": "npm run generate:redirects && npm run generate:importmap",
+    "prebuild": "npm run generate:redirects",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
